tests/idris2/error/perror035/ParseError.idr
module ParseError

%default total

import Data.Nat
